--- a/puzzle/css/style.css
+++ b/puzzle/css/style.css
@@ -1137,11 +1137,12 @@ a {
 }
 
 .contacts {
-  height: 780px;
   background-image: url("../images/contacts_bg.png");
+  min-height: 780px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 40px 0;
 }
 .contacts .container {
   height: 100%;
@@ -1155,15 +1156,14 @@ a {
   gap: 8px;
 }
 .contacts_text {
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 400;
   line-height: 33.6px;
   color: var(--dark-white);
 }
 .contacts_content {
-  font-size: 64px;
+  font-size: 46px;
   font-weight: 700;
-  line-height: 86.4px;
   color: var(--white);
   position: relative;
 }
@@ -1171,6 +1171,7 @@ a {
   position: absolute;
   left: 12px;
   top: 82px;
+  width: 320px;
 }
 .contacts_right {
   width: 50%;
@@ -1342,6 +1343,107 @@ a {
 .back-to-top--hide {
   opacity: 0;
   transform: translateY(20px);
+}
+
+.form__wrapper {
+  margin-top: 100px;
+  width: 100%;
+}
+
+.form__wrapper {
+  width: 90%;
+  padding: 40px 40px 30px 40px;
+  background: #fff;
+  border: 1px solid #eff0f6;
+  border-radius: 24px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.form__wrapper .form-group {
+  margin-bottom: 20px;
+}
+.form__wrapper label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 20px;
+}
+.form__wrapper input[type=text],
+.form__wrapper input[type=tel],
+.form__wrapper select,
+.form__wrapper textarea {
+  width: 100%;
+  font-size: 18px;
+  border: 1px solid #eff0f6;
+  box-shadow: 0 2px 7px 0 rgba(20, 20, 43, 0.08);
+  border-radius: 100px;
+  padding: 18px 22px;
+  transition: 0.3s;
+  outline-color: #0871d2;
+}
+.form__wrapper input:hover,
+.form__wrapper input:hover,
+.form__wrapper select:hover,
+.form__wrapper textarea:hover {
+  border-color: #0871d2;
+}
+.form__wrapper select {
+  background: url("https://www.iconpacks.net/icons/2/free-arrow-down-icon-3101-thumb.png") no-repeat right 0.8em center/1.4em, linear-gradient(to left, rgba(255, 255, 255, 0.3) 3em, rgba(255, 255, 255, 0.2));
+  background-size: 20px 20px;
+  appearance: none;
+  cursor: pointer;
+}
+.form__wrapper textarea {
+  border-radius: 22px;
+  min-height: 144px;
+  padding: 16px 24px;
+  font-size: 18px;
+  line-height: 28px;
+  resize: none;
+}
+.form__wrapper button {
+  width: 100%;
+  border-radius: 200px;
+  padding: 1.2rem 3.5rem;
+  background-color: #0871d2;
+  color: white;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.form__wrapper button:hover {
+  background-color: #0765bb;
+}
+.form__wrapper .error-message {
+  color: red;
+  font-size: 14px;
+  display: none;
+  margin-top: 5px;
+}
+
+.form-success {
+  border-radius: 24px;
+  padding: 28px 28px 32px;
+  line-height: 30px;
+  text-align: center;
+  color: #fff;
+  background-color: rgb(21, 146, 21);
+  display: none;
+}
+.form-success img {
+  width: 100%;
+  max-width: 60px;
+  display: block;
+  margin: auto;
+  margin-bottom: 20px;
+}
+.form-success h3 {
+  margin-bottom: 10px;
+  font-size: 24px;
+}
+.form-success p {
+  font-size: 18px;
 }
 
 @media (min-width: 1477px) {
@@ -1564,6 +1666,10 @@ a {
   .contacts_wrap {
     align-items: center;
     justify-content: center;
+  }
+  .contact-form {
+    margin: auto;
+    width: 100%;
   }
   .footer_top, .footer_bottom {
     flex-direction: column;
@@ -1927,5 +2033,48 @@ a {
   #back-to-top svg {
     width: 16px;
     height: 16px;
+  }
+}
+@media (max-width: 520px) {
+  .form__wrapper {
+    padding: 20px 20px 15px 20px;
+  }
+  .form__wrapper label {
+    margin-bottom: 7px;
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .form__wrapper input[type=text],
+  .form__wrapper input[type=tel],
+  .form__wrapper select,
+  .form__wrapper textarea {
+    font-size: 15px;
+    border-radius: 100px;
+    padding: 12px 16px;
+  }
+  .form__wrapper textarea {
+    border-radius: 20px;
+  }
+  .form__wrapper select {
+    background-size: 10px 10px;
+  }
+  .form__wrapper {
+    margin-top: 50px;
+  }
+  .contacts {
+    padding: 15px 0;
+  }
+  .form-success {
+    padding: 20px 20px 26px;
+  }
+  .form-success img {
+    max-width: 40px;
+  }
+  .form-success h3 {
+    font-size: 20px;
+    margin-bottom: 7px;
+  }
+  .form-success p {
+    font-size: 15px;
   }
 }/*# sourceMappingURL=style.css.map */
