--- a/puzzle/sass/_media.scss
+++ b/puzzle/sass/_media.scss
@@ -285,6 +285,11 @@
         }
     }
 
+    .contact-form {
+        margin: auto;
+        width: 100%;
+    }
+
     .footer {
         &_top,
         &_bottom {
@@ -716,6 +721,52 @@
         svg {
             width: 16px;
             height: 16px;
+        }
+    }
+}
+
+@media (max-width: 520px) {
+    .form__wrapper {
+        padding: 20px 20px 15px 20px;
+        label {
+            margin-bottom: 7px;
+            font-size: 14px;
+            line-height: 16px;
+        }
+
+        input[type='text'],
+        input[type='tel'],
+        select,
+        textarea {
+            font-size: 15px;
+            border-radius: 100px;
+            padding: 12px 16px;
+        }
+        textarea {
+            border-radius: 20px;
+        }
+        select {
+            background-size: 10px 10px;
+        }
+    }
+    .form__wrapper {
+        margin-top: 50px;
+    }
+    .contacts {
+        padding: 15px 0;
+    }
+
+    .form-success {
+        padding: 20px 20px 26px;
+        img {
+            max-width: 40px;
+        }
+        h3 {
+            font-size: 20px;
+            margin-bottom: 7px;
+        }
+        p {
+            font-size: 15px;
         }
     }
 }
