--- a/puzzle/sass/style.scss
+++ b/puzzle/sass/style.scss
@@ -1368,11 +1368,12 @@ a {
 }
 
 .contacts {
-    height: 780px;
     background-image: url('../images/contacts_bg.png');
+    min-height: 780px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 40px 0;
     .container {
         height: 100%;
         display: flex;
@@ -1385,15 +1386,14 @@ a {
         gap: 8px;
     }
     &_text {
-        font-size: 24px;
+        font-size: 22px;
         font-weight: 400;
         line-height: 33.6px;
         color: var(--dark-white);
     }
     &_content {
-        font-size: 64px;
+        font-size: 46px;
         font-weight: 700;
-        line-height: 86.4px;
         color: var(--white);
         position: relative;
     }
@@ -1401,6 +1401,7 @@ a {
         position: absolute;
         left: 12px;
         top: 82px;
+        width: 320px;
     }
     &_right {
         width: 50%;
@@ -1597,6 +1598,122 @@ a {
 .back-to-top--hide {
     opacity: 0;
     transform: translateY(20px);
+}
+
+.form__wrapper {
+    margin-top: 100px;
+    width: 100%;
+}
+
+.form__wrapper {
+    width: 90%;
+    padding: 40px 40px 30px 40px;
+    background: #fff;
+    border: 1px solid #eff0f6;
+    border-radius: 24px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+    label {
+        display: block;
+        margin-bottom: 10px;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 20px;
+    }
+
+    input[type='text'],
+    input[type='tel'],
+    select,
+    textarea {
+        width: 100%;
+        font-size: 18px;
+        border: 1px solid #eff0f6;
+        box-shadow: 0 2px 7px 0 rgba(20, 20, 43, 0.08);
+        border-radius: 100px;
+        padding: 18px 22px;
+        transition: 0.3s;
+        outline-color: #0871d2;
+    }
+
+    input:hover,
+    input:hover,
+    select:hover,
+    textarea:hover {
+        border-color: #0871d2;
+    }
+
+    select {
+        background: url('https://www.iconpacks.net/icons/2/free-arrow-down-icon-3101-thumb.png')
+                no-repeat right 0.8em center / 1.4em,
+            linear-gradient(
+                to left,
+                rgba(255, 255, 255, 0.3) 3em,
+                rgba(255, 255, 255, 0.2)
+            );
+        background-size: 20px 20px;
+        appearance: none;
+        cursor: pointer;
+    }
+
+    textarea {
+        border-radius: 22px;
+        min-height: 144px;
+        padding: 16px 24px;
+        font-size: 18px;
+        line-height: 28px;
+        resize: none;
+    }
+
+    button {
+        width: 100%;
+        border-radius: 200px;
+        padding: 1.2rem 3.5rem;
+        background-color: #0871d2;
+        color: white;
+        border: none;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+        background-color: #0765bb;
+    }
+    .error-message {
+        color: red;
+        font-size: 14px;
+        display: none;
+        margin-top: 5px;
+    }
+}
+
+.form-success {
+    border-radius: 24px;
+    padding: 28px 28px 32px;
+    line-height: 30px;
+    text-align: center;
+    color: #fff;
+    background-color: rgb(21, 146, 21);
+
+    display: none;
+
+    img {
+        width: 100%;
+        max-width: 60px;
+        display: block;
+        margin: auto;
+        margin-bottom: 20px;
+    }
+    h3 {
+        margin-bottom: 10px;
+        font-size: 24px;
+    }
+    p {
+        font-size: 18px;
+    }
 }
 
 @import './media';
