--- a/puzzle/css/style.css
+++ b/puzzle/css/style.css
@@ -1441,6 +1441,179 @@ a {
   font-size: 18px;
 }
 
+.portfolio {
+  padding: 150px 0;
+}
+.portfolio-swiper {
+  max-width: 1320px;
+  padding: 0 80px;
+  width: 100%;
+  margin-top: 40px;
+}
+.portfolio-wraper {
+  position: relative;
+  width: 100%;
+}
+.portfolio-slide {
+  width: 100%;
+  height: 542px;
+  padding: 72px 88px;
+  border-radius: 56px;
+  color: white;
+  background-color: #070a03;
+  overflow: hidden;
+}
+.portfolio .swiper-button-prev:after,
+.portfolio .swiper-button-next:after {
+  display: none;
+}
+.portfolio .swiper-button-disabled {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.6s ease;
+}
+.portfolio .swiper-button-next,
+.portfolio .swiper-button-prev {
+  background-image: url(../images/arrow-next.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.portfolio .swiper-button-prev {
+  transform: rotate(180deg);
+}
+.portfolio .portfolio-pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 40px;
+}
+.portfolio .portfolio-pagination span {
+  width: 16px;
+  height: 16px;
+}
+.portfolio__content {
+  position: relative;
+  z-index: 3;
+  max-width: 455px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.portfolio__title {
+  font-family: DM Sans;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 56px;
+  text-align: left;
+  letter-spacing: 0.04em;
+  text-decoration-skip-ink: none;
+}
+.portfolio .nowrap_text {
+  text-wrap: nowrap;
+}
+.portfolio__subtitle {
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+.portfolio .stack {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 8px;
+  list-style: none;
+  padding: 24px 0;
+}
+.portfolio .stack__item {
+  padding: 2px 6px;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 18.2px;
+  text-decoration-skip-ink: none;
+  color: var(--color);
+  background-color: var(--bg);
+  border-radius: 9px;
+}
+.portfolio .view-btn {
+  border: none;
+  max-width: 320px;
+  width: 100%;
+  text-align: center;
+  border-radius: 100px;
+  padding: 16px 0;
+  font-family: "Inter";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20.8px;
+  text-align: center;
+  text-decoration-skip-ink: none;
+  color: var(--color);
+  background-color: var(--bg);
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.portfolio .view-btn:hover {
+  opacity: 0.9;
+}
+.portfolio img {
+  position: absolute;
+  border-radius: 18px;
+  display: block;
+}
+.portfolio .work-bottom {
+  bottom: -50px;
+  max-width: 420px;
+  height: auto;
+  right: 100px;
+  z-index: 2;
+}
+.portfolio .work-top {
+  top: -50px;
+  right: 0;
+  max-width: 420px;
+  height: auto;
+  z-index: 1;
+}
+.portfolio .bg-ellipse {
+  height: 100%;
+  right: 0;
+  bottom: 0;
+}
+.portfolio .bg-ellipse-mobile {
+  display: none;
+}
+.portfolio .long_img-bottom {
+  bottom: 0;
+  right: 0;
+  max-width: 550px;
+  z-index: 3;
+}
+.portfolio .long_img-top {
+  bottom: 40%;
+  right: 0;
+  max-width: 450px;
+  z-index: 2;
+}
+.portfolio__group {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.centered {
+  text-align: center;
+}
+
 @media (min-width: 1477px) {
   .plans_puzzle {
     top: -151px;
@@ -2088,5 +2261,191 @@ a {
   }
   .form-success p {
     font-size: 15px;
+  }
+}
+@media (max-width: 1120px) {
+  .portfolio {
+    padding: 56px 0;
+  }
+  .portfolio-swiper {
+    padding: 0 60px;
+  }
+  .portfolio-wraper {
+    position: relative;
+    width: 100%;
+  }
+}
+@media (max-width: 1000px) {
+  .portfolio-swiper {
+    padding: 0 60px;
+  }
+  .portfolio-wraper {
+    position: relative;
+    width: 100%;
+  }
+  .portfolio-slide {
+    width: 100%;
+    height: auto;
+    padding: 32px 50px 500px 32px;
+    border-radius: 56px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .portfolio__content {
+    position: relative;
+    z-index: 3;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: auto;
+    gap: 20px;
+  }
+  .portfolio__group {
+    position: absolute;
+    width: 100%;
+  }
+  .portfolio .work-bottom {
+    bottom: 0;
+    right: 50px;
+    left: 20px;
+    z-index: 2;
+  }
+  .portfolio .work-top {
+    right: 10px;
+    z-index: 1;
+    top: 50%;
+  }
+  .portfolio .long_img-bottom {
+    width: 140%;
+    bottom: 0;
+    right: -20%;
+  }
+  .portfolio .long_img-top {
+    width: 80%;
+    bottom: 100px;
+    right: 20%;
+  }
+  .portfolio .big-piture {
+    bottom: 0;
+    width: 60%;
+  }
+  .portfolio .bg-ellipse {
+    height: 50%;
+    right: 0;
+    bottom: 0;
+    display: none;
+  }
+  .portfolio .bg-ellipse-mobile {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 70%;
+    bottom: 0;
+  }
+  .portfolio .swiper-button-next,
+  .portfolio .swiper-button-prev {
+    display: none;
+  }
+}
+@media (max-width: 700px) {
+  .portfolio-swiper {
+    padding: 0;
+  }
+  .portfolio-wraper {
+    position: relative;
+    width: 100%;
+  }
+  .portfolio-slide {
+    width: 100%;
+    height: auto;
+    padding: 32px 16px 440px 16px;
+    border-radius: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .portfolio .work-bottom {
+    bottom: 0;
+    right: 50px;
+    left: 20px;
+    z-index: 2;
+    max-width: 70%;
+  }
+  .portfolio .work-top {
+    right: 10px;
+    z-index: 1;
+    top: 55%;
+    max-width: 70%;
+  }
+  .portfolio .long_img-top {
+    width: 130%;
+    bottom: 200px;
+    right: 20%;
+  }
+  .portfolio .long_img-bottom {
+    width: 100%;
+    bottom: 50px;
+    right: 0;
+  }
+  .portfolio .big-piture {
+    bottom: 80px;
+    width: 70%;
+  }
+  .portfolio .bg-ellipse {
+    height: 50%;
+    right: 0;
+    bottom: 0;
+    display: none;
+  }
+  .portfolio .bg-ellipse-mobile {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+  }
+  .portfolio__title {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 34px;
+    text-align: left;
+    letter-spacing: 0.02em;
+  }
+  .portfolio .nowrap_text {
+    text-wrap: wrap;
+  }
+  .portfolio__subtitle {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+  }
+  .portfolio .view-btn {
+    max-width: 100%;
+    width: 100%;
+    text-align: center;
+    border-radius: 100px;
+    padding: 16px 0;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20.8px;
+    text-align: center;
+    text-decoration-skip-ink: none;
+    color: var(--color);
+    background-color: var(--bg);
+    cursor: pointer;
+    transition: all 0.2s;
+  }
+  .portfolio .view-btn:hover {
+    opacity: 0.9;
+  }
+  .portfolio .portfolio-pagination {
+    gap: 8px;
+    margin-top: 20px;
+  }
+  .portfolio .portfolio-pagination span {
+    width: 12px;
+    height: 12px;
   }
 }/*# sourceMappingURL=style.css.map */
